--- a/Documentation/report.tex
+++ b/Documentation/report.tex
@@ -63,4 +63,15 @@
 \title{Warner Brothers Report}
 \date{October 19 2022}
 
-\end{report}
+\begin{document}
+	\item[] Hi
+	
+	
+	
+	
+	
+	
+	
+	
+	
+\end{document}
