--- a/Documentation/report.tex
+++ b/Documentation/report.tex
@@ -64,7 +64,13 @@
 \date{October 19 2022}
 
 \begin{document}
-	\item[] Hi
+	\maketitle
+	\section*{Warner Brothers Report}
+\begin{itemize}
+	\item[] We found that Warner Brothers has not made a drama film since the beginning of this data collection. We also found that dramas receive a higher proportion of best picture nominations than any other genre.
+	\item Our recommendation is to Warner Brothers to increase their production of drama films. 
+	\item[] 
+\end{itemize}
 	
 	
 	
