--- a/Documentation/report.tex
+++ b/Documentation/report.tex
@@ -70,6 +70,10 @@
 	\item[] We found that Warner Brothers has not made a drama film since the beginning of this data collection. We also found that dramas receive a higher proportion of best picture nominations than any other genre.
 	\item Our recommendation is to Warner Brothers to increase their production of drama films. 
 	\item[] 
+	
+	Nominated films that are dramas: 77%
+	Non-nominated films that are dramas: 46%
+	Warner Bros films that are dramas: 0%
 \end{itemize}
 	
 	
