--- a/Documentation/report.tex
+++ b/Documentation/report.tex
@@ -69,13 +69,15 @@
 \begin{itemize}
 	\item[] We found that Warner Brothers has not made a drama film since the beginning of this data collection. We also found that dramas receive a higher proportion of best picture nominations than any other genre.
 	\item Our recommendation is to Warner Brothers to increase their production of drama films. 
-	\item[] 
-	
-	Nominated films that are dramas: 77%
-	Non-nominated films that are dramas: 46%
-	Warner Bros films that are dramas: 0%
+	\item[] Nominated films that are dramas: 77 percent 
+	\item[] Non-nominated films that are dramas: 46 percent 
+	item[] Warner Bros films that are dramas: 0 percent
 \end{itemize}
-	
+
+\begin{itemize}
+	\item[] Through linear regression, we found that films that get nominated for best picture are on average 28 minutes longer than other films.
+	\item We recommend Warner Brothers to make longer films!
+\end{itemize}
 	
 	
 	
